<resources>
    <string name="app_name">Pokémon Regions</string>
    <string name="regions_name">Regions Name</string>
    <string name="detail">Detail</string>
    <string name="email">krisnadwiandrianto04@gmail.com</string>
    <string name="name">Krisna Dwi Andrianto</string>
    <string name="profile">Profile</string>
    <string name="region_information">Region information</string>
    <string name="colon">&#160; : &#160;</string>
    <string name="professor">Professor</string>
    <string name="professor_value">Professor value</string>
    <string name="number_of_pokemon">Number of Pokémon</string>
    <string name="number_of_pokemon_value">Number of Pokémon value</string>
    <string name="starter_pokemon">Starter Pokémon</string>
    <string name="starter_pokemon_value">Starter Pokémon value</string>
    <string name="rivals">Rivals</string>
    <string name="rivals_value">Rivals value</string>
    <string name="crime_organization">Crime organization</string>
    <string name="crime_organization_value">Crime organization value</string>
    <string name="anime_saga">Anime saga</string>
    <string name="anime_saga_value">Anime saga value</string>
    <string name="manga_arcs">Manga arcs</string>
    <string name="manga_arcs_value">Manga arcs value</string>
    <string name="region">About region</string>
    <string name="region_value">About region value</string>
    <string name="cities_and_towns">Cities and towns</string>
    <string name="cities_and_towns_value">Cities and towns value</string>
    <string name="island">Island</string>
    <string name="island_value">Island value</string>
    <string name="other_locations">Other locations</string>
    <string name="other_locations_value">Other locations value</string>
    <string name="areas_of_interest">Areas of Interest</string>
    <string name="areas_of_interest_value">Areas of Interest value</string>
    <string name="landmarks">Landmarks</string>
    <string name="landmarks_value">Landmarks value</string>
    <string name="places_of_interest">Places of Interest</string>
    <string name="places_of_interest_value">Places of Interest value</string>
    <string name="references">References</string>
    <string name="references_value">References value</string>
</resources>